--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "echarts": "^5.2.0",
     "vue": "^3.2.6",
     "vue-router": "^4.0.11"
   },
